--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
   "keywords": ["bitrix","module"],
   "time": "2018-11-27 23:26:00",
   "homepage": "https://github.com/evgen-post/base-bitrix-module",
+  "minimum-stability": "stable",
+  "prefer-stable": true,
   "authors": [
     {
       "name": "Евгений Кривоносов",
