--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
   "homepage": "https://github.com/evgen-post/base-bitrix-module",
   "minimum-stability": "stable",
   "prefer-stable": true,
+  "autoload": {
+    "files": []
+  },
   "authors": [
     {
       "name": "Евгений Кривоносов",
